# Tugas_Day1_Sekuro

src/oop_soal_1_alternatif/: main  main.cpp  mobil.cpp  mobil.hpp
src/ros_soal_1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ros_soal_1/install/antar_menu/lib/antar_menu/: antar_listener  orderan_talker
src/ros_soal_1/install/antar_menu/share/ament_index/resource_index/parent_prefix_path/: antar_menu
src/ros_soal_1/install/antar_menu/share/antar_menu/: local_setup.dsv  package.bash  package.sh  package.zsh
src/ros_soal_1/log/: latest_build
src/ros_soal_1/ws_RumahMakan/install/: local_setup.sh  setup.sh
src/ros_soal_1/ws_RumahMakan/install/antar_menu/lib/antar_menu/: antar_listener  orderan_talker
src/ros_soal_1/ws_RumahMakan/install/antar_menu/share/antar_menu/: package.dsv  package.ps1  package.sh  package.xml
src/ros_soal_1/ws_RumahMakan/log/: latest_build
src/ros_soal_1/ws_RumahMakan/src/antar_menu/: CMakeLists.txt
src/ros_soal_1/ws_RumahMakan/src/antar_menu/src/: antar.cpp  orderan.cpp
src/ros_soal_2/: robotpenjagagudang.cpp
src/soal_2_bonus/: main  mcu.cpp  mcu.hpp  mcu_cam_controller.cpp  mcu_cam_controller.hpp  mcu_walker.cpp  mcu_walker.hpp
src/soal_cmake/: CMakeLists.txt
